--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CHIHO DESIGN</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-
+    <header>
+        <div class="Header">
+            <h1 class="header_logo">
+                <img src="./images/chiho_logo.svg" alt="チホデザインロゴ">
+            </h1>
+            <nav class="HeaderMenu_pcnav">
+                <ul>
+                    <li> <a href="#HOME">ホーム<br>HOME</a></li>
+                    <li><a href="#about">私について<br>ABOUT</a></li>
+                    <li><a href="#SKILL">スキル<br>SKILL</a></li>
+                    <li><a href="#WORKS">制作実績<br>WORKS</a></li>
+                </ul>
+                <button class="icon-button">
+                    <img src="./images/mail_icon.svg" alt="アイコン" class="button-icon">
+                    <span>お問合せ<br>CONTACT</span>
+                </button>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
