--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
-                    <li> <a href="#HOME">ホーム<br>HOME</a></li>
+                    <li> <a href="#home">ホーム<br>HOME</a></li>
                     <li><a href="#about">私について<br>ABOUT</a></li>
                     <li><a href="#SKILL">スキル<br>SKILL</a></li>
                     <li><a href="#WORKS">制作実績<br>WORKS</a></li>
@@ -29,6 +29,17 @@
             </nav>
         </div>
     </header>
+    <section id="home" class="home">
+        <p class="home_text">あなたの想いを<br>デザインに乗せて<br>届けたい</p>
+        <div class="home_text1">
+            <p class="home_text2">NAGAOKA CHIHO</p>
+            <P class="home_text3">Put your thoughts on a paper flight</P>
+        </div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <img src="./images/FV_image.jpg" alt="夕焼けの空" class="home_mainvisual">
+    </section>
+
 </body>
 
 </html>
