--- a/index.html
+++ b/index.html
@@ -35,11 +35,31 @@
             <p class="home_text2">NAGAOKA CHIHO</p>
             <P class="home_text3">Put your thoughts on a paper flight</P>
         </div>
-        <div class="circle1"></div>
-        <div class="circle2"></div>
+        <div class="home_circle1"></div>
+        <div class="home_circle2"></div>
+        <div class="paper_flight">
+            <img src="./images/paper_flight.png" alt="紙飛行機">
+        </div>
         <img src="./images/FV_image.jpg" alt="夕焼けの空" class="home_mainvisual">
     </section>
-
+    <div class="line">
+        <img src="./images/line.svg" alt="">
+    </div>
+    <section id="about" class="about">
+        <div class="about_text">
+            <p class="about_text1">01</p>
+            <p class="about_text2">ABOUT</p>
+        </div>
+        <div class="about_photo">
+            <img src="./images/about_photo.jpg" alt="プロフィール写真" class="about_photo1">
+        </div>
+        <div class="about_circle1"></div>
+        <div class="about_circle2"></div>
+        <p class="about_text3">お客様一人ひとりの想いをデザインの力でお届けしたい。<br>最後にみんなが笑顔になれるデザイナーを目指しています。</p>
+        <button class="aboutme-button">
+            <a href="#aboutme" class="arrow_aboutme">About me</a>
+        </button>
+    </section>
 </body>
 
 </html>
