--- a/index.html
+++ b/index.html
@@ -57,7 +57,13 @@
         <div class="about_circle2"></div>
         <p class="about_text3">お客様一人ひとりの想いをデザインの力でお届けしたい。<br>最後にみんなが笑顔になれるデザイナーを目指しています。</p>
         <button class="aboutme-button">
-            <a href="#aboutme" class="arrow_aboutme">About me</a>
+            <div class="about_me">
+                <a href="#aboutme">About me</a>
+                <div class="about_circle">
+                    <div class="arrow"></div>
+                </div>
+            </div>
+
         </button>
     </section>
 </body>
