--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </div>
         <div class="about_photo">
             <img src="./images/about_photo.jpg" alt="プロフィール写真" class="about_photo1">
+            <div class="about_circle1"></div>
+            <div class="about_circle2"></div>
         </div>
-        <div class="about_circle1"></div>
-        <div class="about_circle2"></div>
         <p class="about_text3">お客様一人ひとりの想いをデザインの力でお届けしたい。<br>最後にみんなが笑顔になれるデザイナーを目指しています。</p>
         <button class="aboutme-button">
             <div class="about_me">
@@ -63,8 +63,86 @@
                     <div class="arrow"></div>
                 </div>
             </div>
-
         </button>
+    </section>
+    <section id="skill" class="skill">
+        <div class="skill_text">
+            <p class="skill_text1">02</p>
+            <p class="skill_text2">SKILL</p>
+            <div class="skill_circle"></div>
+        </div>
+        <div class="skill_contents">
+            <ul class="skill_design">
+                <li class="skill_box">
+                    <div class="design_circle">
+                        <p>Designs</p>
+                        <div class="skill_line"></div>
+                        <img src="./images/WEBページのアイコン素材.svg" alt="WEBページのアイコン">
+                    </div>
+                    <dl>
+                        <dt class="skill_contents_title">WEBデザイン</dt>
+                        <dd>
+                            <p class="skill_comtents_version">
+                                バナー・Webサイト制作をメインに幅広く承ります。丁寧にヒアリングを行い、お客様の課題を解決できるデザインを制作致します。</p>
+                            <p class="skill_tool">使用ツール Photoshop / Illustrator / figma</p>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="skill_design">
+                <li class="skill_box">
+                    <div class="design_circle">
+                        <p>Coding</p>
+                        <div class="skill_line"></div>
+                        <img src="./images/プログラムアイコン.svg" alt="パソコンのアイコン">
+                    </div>
+                    <dl>
+                        <dt class="skill_contents_title">コーディング</dt>
+                        <dd>
+                            <p class="skill_comtents_version">
+                                HTML/CSS/JavaScriptでレスポンシブ対応を意識したサイトを制作致します。デザインを基本に、丁寧で更新しやすいコーディングを心掛けています。</p>
+                            <p class="skill_tool">使用ツール HTML/CSS/JavaScript </p>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="skill_design">
+                <li class="skill_box">
+                    <div class="design_circle">
+                        <p>Accounting</p>
+                        <div class="skill_line"></div>
+                        <img src="./images/えんぴつ付きのノートアイコン.svg" alt="ノートと鉛筆のアイコン">
+                    </div>
+                    <dl>
+                        <dt class="skill_contents_title">会計</dt>
+                        <dd>
+                            <p class="skill_comtents_version">
+                                高校・大学で商業を学び、ビジネスの基礎知識やパソコンスキルを学びました。社会人になってからは企業の経理として、売上管理、請求業務、経費管理など多岐に渡り業務を行っています。
+                            </p>
+                            <p class="skill_tool">資格 日商簿記検定2級/全商簿記検定1級</p>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+            <ul class="skill_design">
+                <li class="skill_box">
+                    <div class="design_circle">
+                        <p>Welfare</p>
+                        <div class="skill_line"></div>
+                        <img src="./images/介護のピクトグラム.svg" alt="介護のアイコン">
+                    </div>
+                    <dl>
+                        <dt class="skill_contents_title">福祉</dt>
+                        <dd>
+                            <p class="skill_comtents_version">
+                                家族の影響で福祉業界に興味を持ち、老人ホームの営業と介護認定のある方のお家で歯科治療をする訪問歯科での歯科助手として働いていました。相手の気持ちを考えて接するように心掛けました。
+                            </p>
+                            <p class="skill_tool">資格 福祉環境コーディネーター3級</p>
+                        </dd>
+                    </dl>
+                </li>
+            </ul>
+        </div>
     </section>
 </body>
 
