--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
                         </dd>
                     </dl>
                 </li>
-            </ul>
-            <ul>
                 <li class="skill_box">
                     <div class="skill_circle1">
                         <div>
@@ -128,8 +126,6 @@
                         </dd>
                     </dl>
                 </li>
-            </ul>
-            <ul>
                 <li class="skill_box">
                     <div class="skill_circle1">
                         <div>
@@ -148,8 +144,6 @@
                         </dd>
                     </dl>
                 </li>
-            </ul>
-            <ul>
                 <li class="skill_box">
                     <div class="skill_circle1">
                         <div>
@@ -291,13 +285,13 @@
         $(function () {
             //クリックで要素を表示
             $('.header_about_item').click(function () {
-                $('.about_item').toggle();
+                $('.about_item').fadeToggle();
             })
         });
         $(function () {
             //クリックで要素を表示
             $('.header_works_item').click(function () {
-                $('.works_item').toggle();
+                $('.works_item').fadeToggle();
             })
         });
 
